# bevy_lazy_signals

./: ARCHITECTURE.md  Cargo.toml  README.md  architecture.md  rationale.md
examples/: basic_test.rs
src/: api.rs  arcane_wizardry.rs  bevy_rx.rs  commands.rs  core.rs  factory.rs  framework.rs  lib.rs  reference.rs  reference_impl.rs  signals.rs  types.rs  utilities.rs
src/framework/: bundles.rs  lazy_immutable.rs  mod.rs
src/systems/: computed.rs  effect.rs  init.rs  mod.rs  signal.rs
