[package]
name = "bevy_lazy_signals"
version = "0.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.59"

[dependencies.bevy]
version = "0.13.2"
default-features = false
features = ["bevy_core_pipeline", "bevy_pbr", "bevy_winit", "multi-threaded"]

[dev-dependencies]
async-std = "1.12.0"
