[package]
name = "bevy_lazy_signals"
description = "An ad hoc, informally-specified, bug-ridden, kinda fast implementation of 1/3 of MIT-Scheme."
version = "0.5.1-alpha"
repository = "https://github.com/knutsoned/bevy_lazy_signals"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.59"

[dependencies.bevy]
version = "0.14.0-rc.3"
default-features = false
features = ["bevy_core_pipeline", "bevy_pbr", "bevy_winit", "ktx2", "multi_threaded", "zstd"]

[dev-dependencies]
async-std = "1.12.0"
